# 42campus

./: .gitignore  prueba  prueba.c
Cursus/A_Maze_ing/: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  gitignore  maze.txt  mazegen.py  output_maze.txt  pyproject.toml
Cursus/Exam_Rank_2/: a.out  alpha_mirror.c  do_op.c  first_word.c  fizz_buzz.c  ft_atoi.c  ft_split.c  ft_strcmp.c  ft_strcpy.c  ft_strcspn.c  ft_strlen.c  ft_strrev.c  ft_swap.c  repeat_alpha.c  rev_print.c  rot_13.c  rotone.c  ulstr.c
Cursus/Get_Next_Line/: GNL.c  README.md  Readme.md  a.out  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c  test.c
Cursus/Java/: HolaMundo.java
Cursus/Libft/: .libft.h.swp  Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isdigit.c  ft_itoa.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcspn.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_toupper.c  libft.h  test
Cursus/Push_swap/: Makefile  README.md  args.txt  bench.txt  indexer.c  operations.c  operations_a.c  operations_b.c  parser.c  parser_utils.c  push_swap  push_swap.c  push_swap.h  sizer.c  sorter.c  sorter_radix.c  utils.c
Cursus/Python_Module/: Text.py
Cursus/Python_Module/module-08/ex1/: loading.py  pyproject.toml
(+382 files in other folders)
