[tool.poetry]
name = "loading"
version = "0.1.0"
description = "Matrix data loading exercise (Module 8, ex1)"
authors = ["Data Architect <architect@zion.local>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.24"
pandas = ">=2.0"
matplotlib = ">=3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
